--- a/package.json
+++ b/package.json
@@ -3,21 +3,30 @@
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
+    "type": "module",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "node ./dist/server.js",
-      "build": "npx tsc && npm run copy-files",
-      "copy-files": "xcopy .\\src\\public dist\\public /s /e"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node ./dist/server.js",
+        "build": "npx tsc",
+        "build-cp": "npx tsc && npm run copy-files-npx",
+        "copy-files-npx": "npm run cp-css && npm run cp-html && npm run cp-views",
+        "cp-css": "npx copyfiles -u 3 src/public/css/**.css dist/public/css",
+        "cp-html": "npx copyfiles -u 3 src/public/html/**.html dist/public/html",
+        "cp-views": "npx copyfiles -u 3 src/public/views/**.ejs dist/public/views",
+        "copy-files": "xcopy .\\src\\public dist\\public /s /e"
     },
     "author": "Tyler S",
     "license": "ISC",
     "dependencies": {
-      "@types/express": "^4.17.17",
-      "@types/node": "^20.1.2",
-      "ejs": "^3.1.9",
-      "express": "^4.18.2",
-      "path": "^0.12.7",
-      "ts-node": "^10.9.1",
-      "typescript": "^5.0.4"
+        "@types/express": "^4.17.17",
+        "@types/node": "^20.1.2",
+        "ejs": "^3.1.9",
+        "express": "^4.18.2",
+        "path": "^0.12.7",
+        "ts-node": "^10.9.1",
+        "typescript": "^5.0.4"
+    },
+    "devDependencies": {
+        "copyfiles": "^2.4.1"
     }
-  }
+}
