--- a/package.json
+++ b/package.json
@@ -11,18 +11,20 @@
     "author": "Tyler S, Caleb B, Ekene O",
     "license": "ISC",
     "dependencies": {
+        "ejs": "^3.1.9",
         "express": "^4.18.2",
         "pdf-parse": "^1.1.1"
     },
     "devDependencies": {
+        "@types/ejs": "^3.1.2",
         "@types/express": "^4.17.17",
         "@types/node": "^20.1.2",
+        "@typescript-eslint/eslint-plugin": "^5.59.6",
+        "eslint": "^8.41.0",
+        "nodemon": "^2.0.20",
         "ts-node": "^10.9.1",
         "typescript": "^5.0.4",
-        "nodemon": "^2.0.20",
         "vite": "^4.0.0",
-        "vite-express": "*",
-        "@typescript-eslint/eslint-plugin": "^5.59.6",
-        "eslint": "^8.41.0"
+        "vite-express": "*"
     }
 }
