--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "dev": "nodemon src/server",
         "build": "vite build",
-        "lint": "eslint src --fix"
+        "lint": "eslint src --fix && ejslint src/views"
     },
     "author": "Tyler S, Caleb B, Ekene O",
     "license": "ISC",
@@ -17,6 +17,7 @@
     },
     "devDependencies": {
         "eslint": "^8.41.0",
+        "ejs-lint": "^2.0.0",
         "nodemon": "^2.0.20",
         "vite": "^4.0.0",
         "vite-express": "*"
