--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "license": "ISC",
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "dotenv": "^16.1.3",
     "express": "^4.18.2",
+    "mongodb": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
